# raspisilvio

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RaspiTex.c  RaspiTex.h  RaspiTexUtil.h  cmake_install.cmake  deploy.bat  main.c  main.cpp  picture.tga  raspisilvio  raspisilvio.c  raspisilvio.h  run.sh  step0.tga
1obstacle/: step0.tga  step1.tga  step3.tga  step4.tga  step5.tga
2obstacle/: results.txt  step0.tga  step1.tga  step3.tga  step4.tga  step5.tga
Experiments/Abod1/: results.txt
Experiments/Abod2/: step2.tga
Experiments/Edge1/: step4.tga
Experiments/Edge2/: step0.tga  step1.tga  step2.tga  step3.tga  step4.tga  step5.tga
Experiments/Edge3/: results.txt  step0.tga  step1.tga  step2.tga  step3.tga  step4.tga  step5.tga
edge/: results.txt  step1.tga  step2.tga  step3.tga  step5.tga
gl_scenes/: blurFS.glsl  edgeLineVS.glsl  g5hsiMFS.glsl  gaussian5FS.glsl  gaussian5hsiFS.glsl  gaussian5hsiFS_t.glsl  gaussian5hsi_maskFS.glsl  histCFS.glsl  histCompareFS.glsl  histogramDrawerFS.glsl  histogramDrawerVS.glsl  histogramFS.glsl  histogramVS.glsl  hsiEFS.glsl  hsiFS.glsl  linesFS.glsl  linesVS.glsl  maskFS.glsl  mask_operationEFS.glsl  mask_operationFS.glsl  matching.c  matching.h  matchingFS.glsl  mojonFS.glsl  pointsFS.glsl  pointsVS.glsl  readingFS.glsl  simple4VS.glsl  simpleFS.glsl  simpleFSTTT.glsl  simpleVS.glsl  sobel.c  sobelFS.glsl  sobelFST.glsl  sobelMDSFST.glsl  sobelMXYFS.glsl  sobelMXYFST.glsl  sobelXFS.glsl  sobelXFST.glsl  sobelYFS.glsl  (+3 more)
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
